--- a/app/src/index.css
+++ b/app/src/index.css
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.heading{
+  background-color: aqua;
+  color: red;
+  font-size: 70px;
+  text-decoration: underline;
+  font-family: 'Satisfy', cursive;
+}
+
+body{
+    background-color: aquamarine;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0%;
+    font-family:'Satisfy', cursive;
+}
+
+div{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -30px;
+}
+h1{
+  padding: 20px 20px;
+  background-color: yellow;
+  color: red;
+  border-radius: 20px;
+}
+span{
+  color: pink;
+}
