--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,438 @@
-/* body {
+body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+/* /----------------------------------------------------- */
+/* .heading {
+  background-color: aqua;
+  color: red;
+  font-size: 70px;
+  text-decoration: underline;
+  font-family: "Satisfy", cursive;
+} */
+/* /----------------------------------------------------- */
+/* 
+body {
+  background-color: aquamarine;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0%;
+  font-family: "Satisfy", cursive;
+}
+
+div {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -30px;
+}
+h1 {
+  padding: 20px 20px;
+  background-color: yellow;
+  color: red;
+  border-radius: 20px;
+}
+span {
+  color: pink;
 } */
 
+/* /----------------------------------------------------- */
+
+/* * {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+}
+.heading-style {
+  padding: 30px 0;
+  text-align: center;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: rgb(167, 202, 232);
+  font-size: 3rem;
+  margin-bottom: 30px;
+}
+
+.cards {
+  width: 100%;
+  height: auto;
+}
+.card {
+  margin: 6%;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+  background-color: #fff;
+  width: 21.25%;
+  border-radius: 12px;
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+  float: left;
+}
+.card:hover {
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05, 1.05);
+}
+.card__img {
+  width: 100%;
+  height: 235px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+.card__info {
+  background-color: #fff;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 16px 24px 24px 24px;
+  background-color: #fff;
+}
+.card__category {
+  font-family: sans-serif;
+  text-decoration: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: rgb(58, 46, 46);
+  background-color: #fff;
+}
+.card__title {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-family: sans-serif;
+  background-color: #fff;
+  text-transform: capitalize;
+}
+button{
+  padding: 5px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: rgb(58, 46, 46);
+  outline: none;
+  border: 1px solid black;
+}
+/* this wonk work as the styles are alrady reservved */
+/* .first{
+  color: red;
+  background-color: yellow;
+} */
+/* /----------------------------------------------------- */
+/* *{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+}
+div{
+  width: 100%;
+  height: 100vh;
+  display:  flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button{
+  padding: 15px 20px ;
+  background: purple;
+  color: white;
+  border: 2px solid #fff;
+  outline: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  cursor: pointer;
+} */
+
+/* /----------------------------------------------------- */
+
+/* viseo 33  - handling events in react js 
+ */
+/* *{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background-color: white ;
+}
 
 div{
-  background-color: blue;
+  width: 100%;
+  height: 100vh;
+  background: purple;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+h1{
   color: white;
-  font-size: 4rem;
+  background: transparent;
+  text-shadow: 0 2px 2px  black;
+}
+
+button{
+  padding: 28px 15px ;
+  background: rgb(228, 105, 125);
+  color: white;
+  border: 2px solid white;
+  outline: none;
+  border-radius: 5px;
+  font-size: 30px;
   font-weight: bolder;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  cursor: pointer;
+} */
+
+/* -------------------------------------------------------------- */
+
+/* * {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+}
+
+div {
+  width: 100%;
+  height: 100vh;
+  background: purple;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h1 {
+  color: white;
+  background: transparent;
+  text-shadow: 0 2px 2px black;
+}
+input {
+  width: 50%;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  margin: 20px 0;
+  text-align: center;
+}
+
+button {
+  padding: 28px 15px;
+  background: rgb(228, 105, 125);
+  color: white;
+  border: 2px solid white;
+  outline: none;
+  border-radius: 5px;
+  font-size: 30px;
+  font-weight: bolder;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  cursor: pointer;
+} */
+
+/* ================================================================================================= */
+/* 
+
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+.main_div{
+  width: 100%;
+  height: 100vh;
+  background: blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+}
+.center_div{
+  width: 25%;
+  height: 80vh;
+  background-color: #fff;
+  box-shadow: 5px 5px 25px -5px rgba(0, 0,0, 0.5);
+  border-radius: 15px;
+}
+
+h1{
+  color: white;
+  background-color: transparent;
+  background-color: purple;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 25px -5px rgba(0, 0,0, 0.5);
+}
+
+input{
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid brown;
+  outline: none;
+}
+button{
+  min-height: 40px;
+  width: 40px ;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: aqua;
+  color: #fff;
+  font-size: 40px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0,0, 0.5);
+}
+
+button:hover{
+  background-color: greenyellow;
+}
+
+ol{
+  margin-top: 30px;
+
+}
+
+ol li{
+  padding-left: 0px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: purple;
+  text-transform: capitalize;
+}
+
+.todo_style{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.todo_style .fa-times{
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: purple;
+  border-radius: 50%;
+  margin: 0 15px 0 35px ;
+  color: #fff;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0,0, 0.3);
+}
+
+.todo_style  .fa-times:hover{
+  background-color: crimson;
+}
+
+
+.todo_style  .fa-times:hover  .list_style{
+  color: crimson;
+}
+
+
+@media (max-width: 768px){
+  .center_div{
+    width: 55%;
+  }
+
+  .todo_style .fa-times{
+    margin: 0 15px 0 15px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  button{
+    margin-left: 5px;
+    min-height: 40px;
+    width: 40px;
+    color: #fff;
+    font-size: 30px;
+  }
+} */
+/* ======================================================================== */
+
+.center_div{
+  width: 25%;
+  height: 60vh;
+  background-color: #fff;
+  box-shadow: 5px 5px 25px -5px rgba(0,0,0,0);
+  border-radius: 15px ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.main_div{
+  width: 100%;
+  height: 100vh;
+  background: yellow;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+h1{
+  color: white;
+  background: transparent;
+  font-size: 50px;
+  background: darkblue;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  width: 100%;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.3);
+}
+input{
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid purple;
+  outline: none;
+
+}
+button{
+  min-height: 40px;
+  border-radius: 5%;
+  border-color: transparent;
+  background-color: darkblue;
+  color: #fff;
+  font-size: 20px;
+  border: none;
+  outline-color: none;
+  padding: 0 15px;
+  margin-top: 30px;
+  margin: 30px;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.3);
 }
